Minor fixes in JMeter to ensure the API calls run infinitely and improve the syntax of List creation